--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+HELP.md
+target/
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 # Compiled class file
 *.class
 
@@ -9,6 +14,13 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+# STS
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
 
 # Package Files #
 *.jar
