--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,19 @@
 	      <artifactId>jstl</artifactId>
 	      <version>1.2</version>
 	    </dependency>
-
+	    
+	    <!-- javax.validation -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>6.2.0.Final</version>
+		</dependency>
+		
 	    <!-- data base -->
 	    <dependency>
 	      <groupId>mysql</groupId>
