--- a/pom.xml
+++ b/pom.xml
@@ -37,17 +37,40 @@
 	      <version>${org.springframework-version}</version>
 	    </dependency>
 
-	    <!-- Logging -->
+	   	 <!-- SLF4J API -->
 	    <dependency>
-	      <groupId>org.slf4j</groupId>
-	      <artifactId>slf4j-api</artifactId>
-	      <version>${org.slf4j-version}</version>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-api</artifactId>
+	        <version>1.7.32</version>
 	    </dependency>
+	
+	    <!-- Log4j 2 SLF4J Binding -->
 	    <dependency>
-	      <groupId>org.slf4j</groupId>
-	      <artifactId>jcl-over-slf4j</artifactId>
-	      <version>${org.slf4j-version}</version>
-	      <scope>runtime</scope>
+	        <groupId>org.apache.logging.log4j</groupId>
+	        <artifactId>log4j-slf4j-impl</artifactId>
+	        <version>2.17.1</version>
+	    </dependency>
+	
+	    <!-- Log4j 2 API -->
+	    <dependency>
+	        <groupId>org.apache.logging.log4j</groupId>
+	        <artifactId>log4j-api</artifactId>
+	        <version>2.17.1</version>
+	    </dependency>
+	
+	    <!-- Log4j 2 Core -->
+	    <dependency>
+	        <groupId>org.apache.logging.log4j</groupId>
+	        <artifactId>log4j-core</artifactId>
+	        <version>2.17.1</version>
+	    </dependency>
+	
+	    <!-- Commons Logging to SLF4J bridge -->
+	    <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>jcl-over-slf4j</artifactId>
+	        <version>1.7.32</version>
+	        <scope>runtime</scope>
 	    </dependency>
 
 	    <!-- @Inject -->
