--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 	      </exclusions>
 	    </dependency>
 	    <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+	    <dependency>
 	      <groupId>org.springframework</groupId>
 	      <artifactId>spring-webmvc</artifactId>
 	      <version>${org.springframework-version}</version>
@@ -111,6 +116,25 @@
 		    <version>6.2.0.Final</version>
 		</dependency>
 		
+		<!-- spring batch  -->
+		<dependency>
+		    <groupId>org.springframework.batch</groupId>
+		    <artifactId>spring-batch-core</artifactId>
+        	<version>4.3.4</version>
+		</dependency>
+		<dependency>
+	        <groupId>org.springframework.batch</groupId>
+	        <artifactId>spring-batch-infrastructure</artifactId>
+	        <version>4.3.4</version>
+	    </dependency>
+	    
+      	<!-- Quartz Scheduler -->
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.3.2</version>
+		</dependency>
+
 	    <!-- data base -->
 	    <dependency>
 	      <groupId>mysql</groupId>
@@ -167,10 +191,15 @@
 	    
 	    <!-- jackson-core -->
 	    <dependency>
-	      <groupId>com.fasterxml.jackson.core</groupId>
-	      <artifactId>jackson-core</artifactId>
-	      <version>2.9.2</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.2</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.11.4</version>
+		</dependency>
 	    <dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
