--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
 		    <artifactId>quartz</artifactId>
 		    <version>2.3.2</version>
 		</dependency>
+		
+		<!-- sha256 비밀번호 암호화  -->
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.17.0</version>
+		</dependency>
 
 	    <!-- data base -->
 	    <dependency>
