--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,14 @@
 	      <artifactId>commons-fileupload</artifactId>
 	      <version>1.3.3</version>
 	    </dependency>
-	
+	    
+	    <!-- file MIME Type 검사  -->
+	    <dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+    		<version>1.28</version>
+		</dependency>
+
 	    <!-- Lombok -->
 	    <dependency>
 	      <groupId>org.projectlombok</groupId>
